<!-- TODO: Update blank fragment layout -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/m_m"
    android:orientation="vertical"
    android:gravity="center"
    android:scrollbars="vertical"
    android:layout_margin="20dp"
    tools:context="fragment.ChangePasswordFragment">
            <TextView
                android:id="@+id/txtCaution_ChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/edOldPassword_ChangePassword"
                style="@style/rectangle_EditText"
                android:background="@drawable/top_round"
                android:singleLine="true"
                android:hint="@string/password" />
            <EditText
                android:id="@+id/edNewPassword_ChangePassword"
                style="@style/rectangle_EditText"
                android:background="@drawable/rectangle"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/newPass" />
            <EditText
                android:id="@+id/edConfirmPassword_ChangePassword"
                style="@style/rectangle_EditText"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@drawable/bottom_round"
                android:hint="@string/confirm_password" />
            <Button
                android:id="@+id/btnSave_ChangePassword"
                style="@style/full_button"
                android:text="@string/save"
                android:layout_marginTop="20dp"/>

</LinearLayout>


