<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/create_post_background"
    android:layout_height="match_parent">
    <ScrollView
        style="@style/m_w">
        <LinearLayout
            style="@style/m_w.v"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/txtCaution_CreatePost"
                style="@style/cautionText"/>
            <TextView
                style="@style/m_w"
                android:layout_marginBottom="5dp"
                android:focusable="false"
                android:text="@string/title"/>
            <EditText
                android:id="@+id/edTitle_CreatePost"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_white"/>

            <TextView
                style="@style/m_w"
                android:layout_marginBottom="5dp"
                android:text="@string/group"/>
            <Spinner
                android:id="@+id/spGroup_CreatePost"
                android:layout_width="match_parent"
                android:background="@drawable/rectangle_white"
                android:layout_marginBottom="10dp"
                android:layout_height="30dp"></Spinner>
            <TextView
                style="@style/m_w"
                android:layout_marginBottom="5dp"
                android:text="@string/photo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnPickup_CreatePost"
                    style="@style/m_w"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:text="pick up"/>
                <Button
                    android:id="@+id/btnTakeAPhoto_CreatePost"
                    style="@style/m_w"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:text="take a photo"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/ivPhoto_CreatePost"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/portrait"/>
            <TextView
                style="@style/m_w"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/description"/>
            <EditText
                android:id="@+id/edDescription_CreatePost"
                android:layout_width="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_height="140dp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_white"/>
            <Button
                android:id="@+id/btnCreate_CreatePost"
                style="@style/full_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/create"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/loRule_CreatePost"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtRule_CreatePost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:visibility="visible"
            android:text="@string/lorem_ipsum"/>
        <Button
            android:id="@+id/bntRule_CreatePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="Ok"
            android:background="@color/button_transparent"/>
    </RelativeLayout>
</RelativeLayout>

