<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="1">

        <LinearLayout
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="0.1"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtTitle_ShowPost"
                    android:layout_width="match_parent"
                    android:layout_height="20sp"
                    android:textColor="@color/button"
                    android:text="abc"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    />
                <ImageView
                    android:id="@+id/ivImage_ShowPost"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/portrait"/>
                <TextView
                    android:id="@+id/txtDescription_ShowPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lorem_ipsum"/>
                <RelativeLayout
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtPostOwner_ShowPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/address"/>
                    <TextView
                        android:id="@+id/txtTitleAddress_ShowPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/txtPostOwner_ShowPost"
                        android:text="@string/address"/>
                    <ImageView
                        android:id="@+id/ivIconAddress_ShowPost"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_below="@id/txtPostOwner_ShowPost"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_map"/>
                    <TextView
                        android:id="@+id/txtContentAddress_ShowPost"
                        android:layout_toRightOf="@+id/txtTitleAddress_ShowPost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPostOwner_ShowPost"
                        android:layout_marginLeft="5dp"
                        android:layout_toLeftOf="@id/ivIconAddress_ShowPost"
                        android:layout_weight="1"
                        android:layout_alignTop="@+id/ivIconAddress_ShowPost"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone_number"/>
                    <TextView
                        android:id="@+id/txtTitlePhone_ShowPost"
                        android:layout_below="@id/txtTitleAddress_ShowPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone_number"/>
                    <ImageView
                        android:id="@+id/ivIconPhone_ShowPost"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_below="@id/txtTitleAddress_ShowPost"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_phone_call"/>
                    <TextView
                        android:id="@+id/txtContentPhone_ShowPost"
                        android:layout_below="@id/txtTitleAddress_ShowPost"
                        android:layout_toRightOf="@+id/txtTitlePhone_ShowPost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toLeftOf="@id/ivIconPhone_ShowPost"
                        android:layout_weight="1"
                        android:layout_alignTop="@+id/ivIconPhone_ShowPost"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone_number"/>
                    <TextView
                        android:id="@+id/txtTitleEmail_ShowPost"
                        android:layout_below="@+id/txtTitlePhone_ShowPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/email"/>
                    <ImageView
                        android:id="@+id/ivIconEmail_ShowPost"
                        android:layout_below="@+id/txtTitlePhone_ShowPost"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_mail"/>
                    <TextView
                        android:id="@+id/txtContentEmail_ShowPost"
                        android:layout_below="@+id/txtTitlePhone_ShowPost"
                        android:layout_toRightOf="@+id/txtTitleEmail_ShowPost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toLeftOf="@id/ivIconEmail_ShowPost"
                        android:layout_weight="1"
                        android:layout_alignTop="@+id/ivIconEmail_ShowPost"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone_number"/>
                </RelativeLayout>
            </LinearLayout>
        <LinearLayout
            android:background="@drawable/rectangle_white"
            android:layout_weight="0.9"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_white"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/line_of_editText"
                android:text="@string/favourite"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_white"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/line_of_editText"
                android:text="@string/share"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_white"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/line_of_editText"
                android:text="@string/comment"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>

